Implemented the single job runner

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,13 @@
 name = "batch-command-runner"
 version = "0.1.0"
 edition = "2021"
+authors = ["Wade Berrier <wberrier@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1"
+regex = "1"
+run_script = "0"
+structopt = "0"
+walkdir = "2"
